--- a/Styles/main.css
+++ b/Styles/main.css
@@ -1858,7 +1858,7 @@ textarea.w-select {
   display: grid;
 }
 :root {
-  --uclass1: #000;
+  --uclass1: #ffffff0c;
   --black\<deleted\|variable-3f22ceee\>: black;
   --white: white;
   --silver\<deleted\|variable-f3434a33\>: #c8c8c8;
@@ -11236,7 +11236,7 @@ img {
   line-height: 1.5;
 }
 .footer__top {
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: stretch;
   margin-bottom: 35px;
   display: flex;
@@ -11459,17 +11459,21 @@ img {
 }
 .navbar-4 {
   color: #efefe5;
-  background-color: #0a090f;
-  border: 1px #efefe5;
+  background-color: transparent;
+  /* border: 1px #efefe5; */
   justify-content: center;
   align-items: center;
   padding-top: 15px;
   padding-bottom: 15px;
   display: flex;
 }
+
+.slide-item-1 span {
+  color: #fff !important;
+}
 .navbar-4.site-header {
   border-style: none none solid;
-  border-bottom-color: var(--uclass1);
+  border-bottom-color: transparent;
   padding-top: 0;
   padding-bottom: 0;
 }
